--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html >
+    <style>
+        form {
+        width:100%;
+        height:100px;
+        margin:auto;
+        position:relative;
+        }
+        input {
+        width:80%;
+        height: 30px;
+        word-wrap: break-word;
 
+         }
+        </style> 
 <head>
   <meta charset="UTF-8">
   <title>SMS/EMAIL SPAM PREDICTION</title>
@@ -22,7 +35,7 @@
         <b>Enter the Message</b>
     </p>
     <form action="{{url_for('prediction')}}" method="POST" text-align: center>
-        <input type="text" name="Message" placeholder="Message" required="required" size="50"/><br>
+        <input type="textarea" name="Message" placeholder="Message" required="required" size="50"/><br>
         
 
         <button type="submit" class="btn btn-primary btn-block btn-large">Click to Predict</button>
